<resources>
    <string name="app_name">G11_Computers</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="model_year">Model Year</string>
    <string name="processor">Processor</string>
    <string name="ram_size">Ram Size</string>
    <string name="screen_size_inc">Screen Size(Inc)</string>
    <string name="graphic_card">Graphic Card</string>
    <string name="storage">Storage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_computer">Add Computer</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_model_year">Enter model year</string>
    <string name="enter_processor">Enter processor</string>
    <string name="enter_ram_size">Enter ram size</string>
    <string name="enter_screen_size">Enter screen size</string>
    <string name="enter_graphic_card">Enter graphic card</string>
    <string name="enter_storage">Enter storage</string>
    <string name="add">Add</string>
</resources>